
typedef unsigned long size_t;
typedef long intptr_t; typedef unsigned long uintptr_t;
typedef long scalar_t__;

typedef int bool;






typedef int uint64_t ;
typedef int dsl_pool_t ;
typedef int dmu_tx_t ;


 int B_FALSE ;
 int dsl_pool_user_hold_rele_impl (int *,int ,char const*,int ,int *,int ) ;

int
dsl_pool_user_release(dsl_pool_t *dp, uint64_t dsobj, const char *tag,
    dmu_tx_t *tx)
{
 return (dsl_pool_user_hold_rele_impl(dp, dsobj, tag, 0,
     tx, B_FALSE));
}
